--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Authorization-page - Travel Agency</title>
+    <title>Authorization-page</title>
     <meta property="og:title" content="Authorization-page - Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
@@ -43,11 +43,11 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap"
       data-tag="font"
     />
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" th:href="@{/style/style.css}" type="text/css" />
   </head>
   <body>
     <div>
-      <link href="/style/authorization-page.css" rel="stylesheet" />
+      <link th:href="@{/style/authorization-page.css}" rel="stylesheet" type="text/css" />
 
       <div class="authorization-page-container">
         <header data-role="Header" class="header-header">
@@ -93,47 +93,60 @@
             <br />
             <span>войдите в уже существующий аккаунт.</span>
           </span>
+
+          <div th:if="${param.error}">
+            Неправильное имя или пароль.
+          </div>
+          <div th:if="${param.logout}">
+            Вы успешно авторизованы.
+          </div>
+
+          <form method="POST" th:action="@{/login}" >
           <div class="authorization-page-container2">
             <input
               type="text"
+              name="username"
               placeholder="Логин"
               class="authorization-page-input input"
             />
           </div>
           <div class="authorization-page-container3">
             <input
-              type="text"
+              type="password"
+              name="password"
               placeholder="Пароль"
               class="authorization-page-input1 input"
             />
           </div>
           <div class="button-enter-container button-enter-root-class-name">
-            <button type="button" class="button-enter-button">
-              <span>
-                <span>Войти</span>
-                <br />
-              </span>
-            </button>
-          </div>
-          <div
-            class="button-register-container button-register-root-class-name"
-          >
-            <button type="button" class="button-register-button">
-              Зарегистрироваться
-            </button>
-          </div>
-        </div>
-        <footer class="footer-footer">
-          <span class="footer-text">
-            <span>© 2022 С18-501, все права зарегистрированы.</span>
-          </span>
-        </footer>
-      </div>
-    </div>
-    <script src="https://unpkg.com/@teleporthq/teleport-custom-scripts"></script>
-    <script
-      data-section-id="header"
-      src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
-    ></script>
-  </body>
-</html>
+            <!--  <button type="submit" class="button-enter-button">
+               <span>
+                 <span>Войти</span>
+                 <br />
+               </span>
+             </button> -->
+            <input type="submit" value="Войти" class="button-enter-button"/>
+           </div>
+           </form>
+           <div
+             class="button-register-container button-register-root-class-name"
+           >
+             <button type="button" class="button-register-button">
+               Зарегистрироваться
+             </button>
+           </div>
+         </div>
+         <footer class="footer-footer">
+           <span class="footer-text">
+             <span>© 2022 С18-501, все права зарегистрированы.</span>
+           </span>
+         </footer>
+       </div>
+     </div>
+     <script src="https://unpkg.com/@teleporthq/teleport-custom-scripts"></script>
+     <script
+       data-section-id="header"
+       src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
+     ></script>
+   </body>
+ </html>
