--- a/src/main/resources/templates/new-category-page.html
+++ b/src/main/resources/templates/new-category-page.html
@@ -106,7 +106,7 @@
               </button>
             </div>
             <div class="button-cancel-container button-cancel-root-class-name">
-              <a th:href="@{'/category/all'}">
+              <a th:href="@{'/category/all?pageNumber=0'}">
                 <button type="button" class="button-cancel-button">
                   <span>
                     <span>Отменить</span>
