--- a/src/main/resources/templates/new-category-page.html
+++ b/src/main/resources/templates/new-category-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>New-category-page - Travel Agency</title>
+    <title>Bootleg Amazon</title>
     <meta property="og:title" content="New-category-page - Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
