--- a/src/main/resources/templates/payment-success-page.html
+++ b/src/main/resources/templates/payment-success-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Vibrant Palatable Boar</title>
+    <title>Bootleg Amazon</title>
     <meta property="og:title" content="Vibrant Palatable Boar" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
