--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Travel Agency</title>
+    <title>Bootleg Amazon</title>
     <meta property="og:title" content="Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
@@ -26,6 +26,61 @@
         color: var(--dl-color-gray-black);
         background-color: var(--dl-color-gray-background);
 
+      }
+
+      .popup {
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+      .popup .popuptext {
+        visibility: hidden;
+        width: 370px;
+        background-color: #FFFFFF;
+        border-color: #000000;
+        border-width: 2px;
+        color: #000;
+        text-align: left;
+        border-radius: 15px;
+        padding: 8px 0;
+        position: absolute;
+        z-index: 1;
+        top: 100%;
+        left: 0%;
+        margin-left: -80px;
+      }
+
+      /* Popup arrow */
+      .popup .popuptext::after {
+        content: "";
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #FFFFFF transparent transparent transparent;
+      }
+      /* Toggle this class - hide and show the popup */
+      .popup .show {
+        visibility: visible;
+        -webkit-animation: fadeIn 1s;
+        animation: fadeIn 1s;
+      }
+
+      /* Add animation (fade in the popup) */
+      @-webkit-keyframes fadeIn {
+        from {opacity: 0;}
+        to {opacity: 1;}
+      }
+
+      @keyframes fadeIn {
+        from {opacity: 0;}
+        to {opacity:1 ;}
       }
     </style>
     <link
@@ -54,19 +109,23 @@
           <div class="header-container">
             <div class="tool-box-container tool-box-root-class-name">
               <div class="tool-box-container1">
-                <input
-                  type="text"
-                  placeholder="Поиск товара"
-                  class="tool-box-input input"
-                />
-                <svg
-                  viewBox="0 0 950.8571428571428 1024"
-                  class="tool-box-search"
-                >
-                  <path
-                    d="M658.286 475.429c0-141.143-114.857-256-256-256s-256 114.857-256 256 114.857 256 256 256 256-114.857 256-256zM950.857 950.857c0 40-33.143 73.143-73.143 73.143-19.429 0-38.286-8-51.429-21.714l-196-195.429c-66.857 46.286-146.857 70.857-228 70.857-222.286 0-402.286-180-402.286-402.286s180-402.286 402.286-402.286 402.286 180 402.286 402.286c0 81.143-24.571 161.143-70.857 228l196 196c13.143 13.143 21.143 32 21.143 51.429z"
-                  ></path></svg
-                ><svg viewBox="0 0 1024 1024" class="tool-box-cart">
+                <form  th:method="POST" th:action="@{/items/search}">
+                  <input
+                          type="text"
+                          name="search"
+                          placeholder="Поиск товара"
+                          class="tool-box-input input"
+                  />
+                  <button type="submit">
+                    <svg viewBox="0 0 950.8571428571428 1024" class="tool-box-search">
+                      <path
+                              d="M658.286 475.429c0-141.143-114.857-256-256-256s-256 114.857-256 256 114.857 256 256 256 256-114.857 256-256zM950.857 950.857c0 40-33.143 73.143-73.143 73.143-19.429 0-38.286-8-51.429-21.714l-196-195.429c-66.857 46.286-146.857 70.857-228 70.857-222.286 0-402.286-180-402.286-402.286s180-402.286 402.286-402.286 402.286 180 402.286 402.286c0 81.143-24.571 161.143-70.857 228l196 196c13.143 13.143 21.143 32 21.143 51.429z"
+                      ></path>
+                    </svg>
+                  </button>
+
+                </form>
+                <svg viewBox="0 0 1024 1024" class="tool-box-cart">
                   <path
                     d="M726 768q34 0 59 26t25 60-25 59-59 25-60-25-26-59 26-60 60-26zM42 86h140l40 84h632q18 0 30 13t12 31q0 2-6 20l-152 276q-24 44-74 44h-318l-38 70-2 6q0 10 10 10h494v86h-512q-34 0-59-26t-25-60q0-20 10-40l58-106-154-324h-86v-84zM298 768q34 0 60 26t26 60-26 59-60 25-59-25-25-59 25-60 59-26z"
                   ></path></svg
@@ -80,23 +139,41 @@
           </div>
         </header>
         <div class="catalog-page-container1">
-          <h1 class="catalog-page-text">Каталог</h1>
+          <a th:href="@{/items/all(page=0)}">
+            <h1 class="catalog-page-text">Каталог</h1>
+          </a>
           <div class="catalog-page-container2">
             <div class="button-sort-container button-sort-root-class-name">
-              <div class="button-sort-button">
-                  <span>Сортировка</span>
+              <div class="popup button-sort-button" onclick="sortPopupFunction()">Сортировка
+                  <span class="popuptext" id="sortPopup">
                     <div class="list" th:each="sortMethod : ${sortMethods}">
-                      <a th:text="${sortMethod}" th:href="@{/items/all(pageNumber=${currentPage}, sort=${sortMethod} )}"></a>
+                      <a th:text="${sortMethod}" th:href="@{'/items/all?page=0&sort=' + ${sortMethod} + ${hrefArgs.getHrefArgsExcept('sort')}}"></a>
                     </div>
+                  </span>
               </div>
+              <script>
+                // When the user clicks on div, open the popup
+                function sortPopupFunction() {
+                  var popup = document.getElementById("sortPopup");
+                  popup.classList.toggle("show");
+                }
+              </script>
             </div>
             <div class="button-filter-container button-filter-root-class-name">
-              <div class="button-filter-button">
-                  <span>Фильтр</span>
-                  <div class="list" >
-                    tut filtr
-                  </div>
+              <div class="popup button-filter-button" onclick="filterPopupFunction()">Фильтр
+                  <span class="popuptext" id="filterPopup">
+                    <div class="list">
+                      tut filtr
+                    </div>
+                  </span>
               </div>
+              <script>
+                // When the user clicks on div, open the popup
+                function filterPopupFunction() {
+                  var popup = document.getElementById("filterPopup");
+                  popup.classList.toggle("show");
+                }
+              </script>
             </div>
           </div>
         </div>
@@ -128,7 +205,7 @@
           </div>
         </div>
         <div class="categories-page-container8">
-          <a th:href="@{/items/all(pageNumber=${previousPage})}" >
+          <a th:href="@{'/items/all?page=' + ${previousPage} + ${hrefArgs.getHrefArgs()}}" >
             <button type="button">
               <svg viewBox="0 0 1024 1024" class="categories-page-icon10">
                 <path
@@ -138,7 +215,7 @@
             </button>
           </a>
           <label class="categories-page-text6" th:text="${currentPage + 1}"></label>
-          <a th:href="@{/items/all(pageNumber=${nextPage})}" >
+          <a  th:href="@{'/items/all?page=' + ${nextPage} + ${hrefArgs.getHrefArgs()}}" >
             <button type="button">
               <svg viewBox="0 0 1024 1024" class="categories-page-icon12">
                 <path
