--- a/src/main/resources/templates/item-page.html
+++ b/src/main/resources/templates/item-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Item-page - Travel Agency</title>
+    <title>Bootleg Amazon</title>
     <meta property="og:title" content="Item-page - Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
@@ -59,19 +59,13 @@
           <div class="header-container">
             <div class="tool-box-container tool-box-root-class-name">
               <div class="tool-box-container1">
-                <input
-                  type="text"
-                  placeholder="Поиск товара"
-                  class="tool-box-input input"
-                />
-                <svg
-                  viewBox="0 0 950.8571428571428 1024"
-                  class="tool-box-search"
-                >
+                <input type="text" placeholder="Поиск товара" class="tool-box-input input"/>
+                <svg viewBox="0 0 950.8571428571428 1024" class="tool-box-search">
                   <path
                     d="M658.286 475.429c0-141.143-114.857-256-256-256s-256 114.857-256 256 114.857 256 256 256 256-114.857 256-256zM950.857 950.857c0 40-33.143 73.143-73.143 73.143-19.429 0-38.286-8-51.429-21.714l-196-195.429c-66.857 46.286-146.857 70.857-228 70.857-222.286 0-402.286-180-402.286-402.286s180-402.286 402.286-402.286 402.286 180 402.286 402.286c0 81.143-24.571 161.143-70.857 228l196 196c13.143 13.143 21.143 32 21.143 51.429z"
-                  ></path></svg
-                ><svg viewBox="0 0 1024 1024" class="tool-box-cart">
+                  ></path>
+                </svg>
+                <svg viewBox="0 0 1024 1024" class="tool-box-cart">
                   <path
                     d="M726 768q34 0 59 26t25 60-25 59-59 25-60-25-26-59 26-60 60-26zM42 86h140l40 84h632q18 0 30 13t12 31q0 2-6 20l-152 276q-24 44-74 44h-318l-38 70-2 6q0 10 10 10h494v86h-512q-34 0-59-26t-25-60q0-20 10-40l58-106-154-324h-86v-84zM298 768q34 0 60 26t26 60-26 59-60 25-59-25-25-59 25-60 59-26z"
                   ></path></svg
@@ -86,11 +80,22 @@
         </header>
         <div class="item-page-container1">
           <h1 class="item-page-text" th:text="${article.itemName}"></h1>
-          <svg viewBox="0 0 1024 1024" class="item-page-icon">
-            <path
-              d="M884 300l-78 78-160-160 78-78q12-12 30-12t30 12l100 100q12 12 12 30t-12 30zM128 736l472-472 160 160-472 472h-160v-160z"
-            ></path>
-          </svg>
+          <a th:href="@{/items/{id}/edit(id=${article.id})}">
+            <svg viewBox="0 0 1024 1024" class="item-page-icon">
+              <path
+                      d="M884 300l-78 78-160-160 78-78q12-12 30-12t30 12l100 100q12 12 12 30t-12 30zM128 736l472-472 160 160-472 472h-160v-160z"
+              ></path>
+            </svg>
+          </a>
+          <form th:method="POST" th:action="@{/items/{id}/delete(id=${article.id})}">
+            <button type="submit">
+              <svg viewBox="0 0 1024 1024" class="item-page-icon">
+                <path
+                        d="M662 170h148v86h-596v-86h148l44-42h212zM360 506l92 92-90 90 60 60 90-90 90 90 60-60-90-90 90-92-60-60-90 92-90-92zM256 810v-512h512v512q0 34-26 60t-60 26h-340q-34 0-60-26t-26-60z"
+                ></path>
+              </svg>
+            </button>
+          </form>
         </div>
         <div class="item-page-container2">
           <div class="item-page-container3">
