--- a/src/main/resources/templates/payment-cancel-page.html
+++ b/src/main/resources/templates/payment-cancel-page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>payment-cancel-page - Vibrant Palatable Boar</title>
+    <title>Bootleg Amazon</title>
     <meta
             property="og:title"
             content="payment-cancel-page - Vibrant Palatable Boar"
