frontend for registration page

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -132,7 +132,7 @@
              class="button-register-container button-register-root-class-name"
            >
              <button type="button" class="button-register-button">
-               Зарегистрироваться
+               Войти
              </button>
            </div>
          </div>
