--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -9,6 +9,7 @@
   --dl-color-primary-500: #643843ff;
   --dl-color-primary-700: #775860ff;
   --dl-size-size-halfunit: 0.5rem;
+  --dl-color-primary-admin: #095d41ff;
   --dl-radius-radius-round: 50%;
   --dl-size-size-doubleunit: 2rem;
   --dl-size-size-tripleunit: 3rem;
