--- a/src/main/resources/templates/new-edit-profile-page.html
+++ b/src/main/resources/templates/new-edit-profile-page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Profile-page - Travel Agency</title>
-    <meta property="og:title" content="Profile-page - Travel Agency" />
+    <title>NewEdit-Profile-page - Travel Agency</title>
+    <meta property="og:title" content="NewEdit-Profile-page - Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -38,13 +38,13 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap"
       data-tag="font"
     />
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" th:href="@{/style/style.css}" type="text/css" />
   </head>
   <body>
     <div>
-      <link href="/style/profile-page.css" rel="stylesheet" />
+      <link th:href="@{/style/new-edit-profile-page.css}" rel="stylesheet" type="text/css" />
 
-      <div class="profile-page-container">
+      <div class="new-edit-profile-page-container">
         <header data-role="Header" class="header-header">
           <img
             alt="logo"
@@ -79,37 +79,80 @@
             </div>
           </div>
         </header>
-        <div class="profile-page-container1">
-          <h1 class="profile-page-text">
+        <div class="new-edit-profile-page-container1">
+          <h1 class="new-edit-profile-page-text">
             <span>Профиль</span>
             <br />
           </h1>
         </div>
-        <span class="profile-page-text03">
-          <span>Данные, которые используются для входа и создания заказов</span>
+        <span class="new-edit-profile-page-text03">
+          <span>Введите свои данные для покупок</span>
+          <br />
+          <span>и придумайте логин и пароль</span>
           <br />
         </span>
-        <div class="profile-page-container2">
-          <label class="profile-page-text06" th:text="'Логин: ' + ${currentUser.login}"></label>
-          <label class="profile-page-text07" th:text="'ФИО: ' + ${currentUser.name}"></label>
-          <label class="profile-page-text08" th:text="'Номер телефона: ' + ${currentUser.phone}"></label>
-          <label class="profile-page-text09">Роль</label>
-        </div>
-        <button type="button" class="profile-page-button">
+        <form
+          enctype="application/x-www-form-urlencoded"
+          class="new-edit-profile-page-form"
+        >
+          <input
+            type="text"
+            placeholder="ФИО"
+            required=""
+            autocomplete="name"
+            class="new-edit-profile-page-input input"
+          />
+          <input
+            type="text"
+            enctype="Телефон: +79991112233"
+            placeholder="Телефон: +79991112233"
+            required=""
+            autocomplete="tel"
+            class="new-edit-profile-page-input1 input"
+          />
+          <input
+            type="text"
+            placeholder="Логин"
+            required=""
+            autocomplete="nickname"
+            class="new-edit-profile-page-input2 input"
+          />
+          <input
+            type="text"
+            placeholder="Пароль"
+            required=""
+            autocomplete="new-password"
+            class="new-edit-profile-page-input3 input"
+          />
+          <input
+            type="text"
+            enctype="Повтор пароля"
+            placeholder="Повтор пароля"
+            required=""
+            autocomplete="new-password"
+            class="new-edit-profile-page-input4 input"
+          />
+          <select class="new-edit-profile-page-select input">
+            <option value="Null">Роль</option>
+            <option value="Option 2">Option 2</option>
+            <option value="Option 3">Option 3</option>
+          </select>
+        </form>
+        <button type="button" class="new-edit-profile-page-button">
           <span>
-            <span>Посмотреть все свои заказы</span>
+            <span>Сохранить</span>
             <br />
           </span>
         </button>
-        <button type="button" class="profile-page-button1">
+        <button type="button" class="new-edit-profile-page-button1">
           <span>
-            <span>Перейти в каталог</span>
+            <span>Отменить</span>
             <br />
           </span>
         </button>
-        <button type="button" class="profile-page-button2">
+        <button type="button" class="new-edit-profile-page-button2">
           <span>
-            <span>Перейти в Админ-панель</span>
+            <span>Дезактивироваь</span>
             <br />
           </span>
         </button>
