--- a/src/main/resources/templates/cart-page.html
+++ b/src/main/resources/templates/cart-page.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bootleg Amazon</title>
-    <meta property="og:title" content="Error-page - Travel Agency" />
+    <title>Cart-page - Travel Agency</title>
+    <meta property="og:title" content="Cart-page - Travel Agency" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -38,13 +38,13 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap"
       data-tag="font"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/style/style.css" />
   </head>
   <body>
     <div>
-      <link href="/style/error-page.css" rel="stylesheet" />
+      <link href="/style/cart-page.css" rel="stylesheet" />
 
-      <div class="error-page-container">
+      <div class="cart-page-container">
         <header data-role="Header" class="header-header">
           <img
             alt="logo"
@@ -79,8 +79,50 @@
             </div>
           </div>
         </header>
-        <div class="error-page-container1">
-          <h1 class="error-page-text">ВСЁ ПОШЛО ПО ... 404 :)</h1>
+        <div class="cart-page-container1">
+          <h1 class="cart-page-text">Корзина</h1>
+        </div>
+        <div class="cart-page-container2">
+          <div class="cart-page-container3">
+            <div class="cart-page-container4">
+              <img
+                alt="image"
+                src="https://play.teleporthq.io/static/svg/default-img.svg"
+                class="cart-page-image"
+              />
+              <label class="cart-page-text1">Название айтема</label>
+            </div>
+            <div class="cart-page-container5">
+              <label class="cart-page-text2">15 шт</label>
+              <svg viewBox="0 0 1024 1024" class="cart-page-icon">
+                <path
+                  d="M810 554h-256v256h-84v-256h-256v-84h256v-256h84v256h256v84z"
+                ></path></svg
+              ><svg viewBox="0 0 1024 1024" class="cart-page-icon2">
+                <path d="M810 554h-596v-84h596v84z"></path>
+              </svg>
+            </div>
+            <label class="cart-page-text3">1000 ₽</label>
+            <svg viewBox="0 0 1024 1024" class="cart-page-icon4">
+              <path
+                d="M662 170h148v86h-596v-86h148l44-42h212zM360 506l92 92-90 90 60 60 90-90 90 90 60-60-90-90 90-92-60-60-90 92-90-92zM256 810v-512h512v512q0 34-26 60t-60 26h-340q-34 0-60-26t-26-60z"
+              ></path>
+            </svg>
+          </div>
+        </div>
+        <div class="cart-page-container6">
+          <div class="cart-page-container7">
+            <span class="cart-page-text4">Итого:</span>
+            <label class="cart-page-text5">1000 ₽</label>
+          </div>
+          <div class="cart-page-container8">
+            <button type="button" class="cart-page-button">
+              <span>
+                <span>Оформить</span>
+                <br />
+              </span>
+            </button>
+          </div>
         </div>
         <footer class="footer-footer">
           <span class="footer-text">
@@ -94,5 +136,6 @@
       data-section-id="header"
       src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
     ></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   </body>
 </html>
