--- a/src/main/resources/templates/payment-success-page.html
+++ b/src/main/resources/templates/payment-success-page.html
@@ -1,52 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Bootleg Amazon</title>
-    <meta property="og:title" content="Vibrant Palatable Boar" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta charset="utf-8" />
-    <meta property="twitter:card" content="summary_large_image" />
+<head>
+  <title>Bootleg Amazon</title>
+  <meta property="og:title" content="Travel Agency" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta property="twitter:card" content="summary_large_image" />
 
-    <style data-tag="reset-style-sheet">
-      html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
-    </style>
-    <style data-tag="default-style-sheet">
-      html {
-        font-family: Inter;
-        font-size: 16px;
-      }
+  <style data-tag="reset-style-sheet">
+    html {  line-height: 1.15;}body {  margin: 0;}* {  box-sizing: border-box;  border-width: 0;  border-style: solid;}p,li,ul,pre,div,h1,h2,h3,h4,h5,h6,figure,blockquote,figcaption {  margin: 0;  padding: 0;}button {  background-color: transparent;}button,input,optgroup,select,textarea {  font-family: inherit;  font-size: 100%;  line-height: 1.15;  margin: 0;}button,select {  text-transform: none;}button,[type="button"],[type="reset"],[type="submit"] {  -webkit-appearance: button;}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner {  border-style: none;  padding: 0;}button:-moz-focus,[type="button"]:-moz-focus,[type="reset"]:-moz-focus,[type="submit"]:-moz-focus {  outline: 1px dotted ButtonText;}a {  color: inherit;  text-decoration: inherit;}input {  padding: 2px 4px;}img {  display: block;}html { scroll-behavior: smooth  }
+  </style>
+  <style data-tag="default-style-sheet">
+    html {
+      font-family: Open Sans;
+      font-size: 1rem;
+    }
 
-      body {
-        font-weight: 400;
-        font-style:normal;
-        text-decoration: none;
-        text-transform: none;
-        letter-spacing: normal;
-        line-height: 1.15;
-        color: var(--dl-color-gray-black);
-        background-color: var(--dl-color-gray-white);
+    body {
+      font-weight: 400;
+      font-style: normal;
+      text-decoration: none;
+      text-transform: none;
+      letter-spacing: normal;
+      line-height: 1.55;
+      color: var(--dl-color-gray-black);
+      background-color: var(--dl-color-gray-background);
+    }
+  </style>
+  <link
+          rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Rubik+Dirt:wght@400&amp;display=swap"
+          data-tag="font"
+  />
+  <link
+          rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&amp;display=swap"
+          data-tag="font"
+  />
+  <link rel="stylesheet" href="/style/style.css" />
+</head>
+<body>
+<div>
+  <link href="/style/catalog-page.css" rel="stylesheet" />
 
-      }
-    </style>
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&amp;display=swap"
-      data-tag="font"
-    />
-    <link rel="stylesheet" href="./style/style.css" />
-  </head>
-  <body>
-    <div>
-      <link href="./style/payment-success-page.css" rel="stylesheet" />
-
-      <div class="payment-success-page-container">
-        <span class="payment-success-page-text">Оплата успешна!</span>
-        <img
-          src="https://images.unsplash.com/photo-1523287562758-66c7fc58967f?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDF8fHN1Y2Nlc3N8ZW58MHx8fHwxNjY5ODQ0MTgy&amp;ixlib=rb-4.0.3&amp;q=80&amp;w=1100"
-          alt="image"
-          class="payment-success-page-image"
-        />
-      </div>
+  <div class="catalog-page-container">
+    <header data-role="Header" class="header-header">
+      <img
+              alt="logo"
+              src="https://i.imgur.com/vizTO84.png"
+              class="header-image"
+      />
+    </header>
+    <div class="catalog-page-container1">
+      <h1 class="catalog-page-text">Оплата прошла успешно</h1>
     </div>
-  </body>
+      <a th:href="@{'/items/all?page=0'}">
+        <button type="button" class="button-add-button">
+          <span>
+            <h2>На главную</h2>
+            <br />
+          </span>
+        </button>
+      </a>
+      <a th:href="@{'/orders/foruser'}">
+        <button type="button" class="button-add-button">
+          <span>
+            <h2>Посмотреть мои заказы</h2>
+            <br />
+          </span>
+        </button>
+      </a>
+    <footer class="footer-footer">
+              <span class="footer-text">
+                <span>© 2022 С18-501, все права зарегистрированы.</span>
+              </span>
+    </footer>
+  </div>
+</div>
+<script src="https://unpkg.com/@teleporthq/teleport-custom-scripts"></script>
+<script
+        data-section-id="header"
+        src="https://unpkg.com/@teleporthq/teleport-custom-scripts"
+></script>
+</body>
 </html>
+
